# vcrypto

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.py  unittest.bat  upload.bat
.github/scripts/: check_if_update_needed.py  get_version.py  utils.py  validate_versions.py
.github/workflows/: CI.yaml  check_version.yaml  pre-commit.yaml  publish.yaml  tag_commits_on_main.yaml  unittests.yaml
src/: encryption.py  utilities.py  vcrypto.py
test/: test_cipher.py  test_encryption.py  test_utilities.py  test_utils.py
tests/: test_cipher.py  test_encryption.py  test_secrets_manager.py  test_utilities.py  test_vcrypto.py
v_crypt/: __init__.py  defaults.py  encryption.py  utilities.py  utils.py  v_crypt.py
vcrypto/: __init__.py  defaults.py  encryption.py  secrets_manager.py  utilities.py  vcrypto.py
