[project]
name = "vcrypto"
version = "4.0.0"
description = "Utility to easily store password/secrets"
authors = ["Arnau Villoro <arnau@villoro.com>"]
maintainers = ["Arnau Villoro <arnau@villoro.com>"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.1",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.9.7",
]
