[project]
name = "vcrypto"
version = "4.0.0"
description = "Utility to easily store password/secrets"
authors = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
maintainers = [{ name = "Arnau Villoro", email = "arnau@villoro.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.1",
    "loguru>=0.7.3",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.9.7",
]
